[project]
name = "llm-learning"
version = "0.1.0"
description = "LLM learning experiments"
requires-python = ">=3.13, <3.14"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]